--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "intl-tel-input": "^17.0.5",
     "jquery": "^3.5.1",
     "npm": "^6.14.8",
     "popper.js": "^1.16.1"
